--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body {
 	min-height: 100%;
 	display: flex;
 	flex-direction: column;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 /* ---Header--- */
@@ -210,22 +210,29 @@ body {
 }
 
 .slider {
-	width: 100%;
-	height: 700px;
+	max-width: 100%;
 	position: relative;
+	overflow: hidden;
 }
 
-.slider>img {
-	width: 100%;
-	height: 100%;
+.slider__row {
+	display: flex;
+	background-color: silver;
+	transition: all ease 1s;
 }
 
-.slider_background {
-	width: 100%;
-	height: 100%;
+.slider__controls {
 	position: absolute;
-	top: 0;
-	left: 0;
-	background: #333333;
-	opacity: 0.35;
+	left: 50%;
+	bottom: 5%;
+	transform: translateX(-50%);
+	display: flex;
+	gap: 30px;
+}
+
+.slider__prev,
+.slider__next {
+	font-size: 20px;
+	cursor: pointer;
+	user-select: none;
 }
