--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body {
 	min-height: 100%;
 	display: flex;
 	flex-direction: column;
-	/* overflow: hidden; */
+	overflow: hidden;
 }
 
 /* ---Header--- */
@@ -205,14 +205,43 @@ body {
 .main {
 	width: 100%;
 	min-height: 100%;
+	flex: 1 1 auto;
 	display: flex;
 	flex-direction: column;
 }
 
+/* ---Slider--- */
 .slider {
 	max-width: 100%;
 	position: relative;
 	overflow: hidden;
+}
+
+.slider__body {
+	position: absolute;
+	top: 15%;
+	right: 58px;
+	z-index: 2;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+}
+
+.slider__title {
+	font-weight: 300;
+	font-size: 70px;
+	line-height: 72px;
+	margin-bottom: 34px;
+}
+
+.slider__subtitle {
+	display: inline-block;
+	width: 370px;
+	text-align: center;
+	font-family: Montserrat;
+	font-size: 20px;
+	line-height: 28px;
+	margin-right: 84px;
 }
 
 .slider__row {
@@ -235,4 +264,163 @@ body {
 	font-size: 20px;
 	cursor: pointer;
 	user-select: none;
+}
+
+/* ---Cabins--- */
+
+.cabins {
+	max-width: 100%;
+	height: 100%;
+	padding: 150px 0;
+	display: flex;
+	flex-direction: column;
+	gap: 150px;
+}
+
+.cabins__row {
+	display: flex;
+	margin: 0 -52.5px;
+	/* 105px -> 52.5px */
+}
+
+.cabins__column {
+	padding: 0 52.5px;
+}
+
+.cabins__body {
+	align-self: flex-end;
+	padding-left: 147px;
+}
+
+.cabins__title,
+.cabins__link {
+	color: #5B6460;
+}
+
+.cabins__title {
+	font-size: 40px;
+	line-height: 40px;
+	margin-bottom: 50px;
+}
+
+.cabins__text {
+	color: #000;
+	font-weight: 300;
+	line-height: 30px;
+	margin-bottom: 30px;
+}
+
+.cabins__link {
+	font-weight: 600;
+	line-height: 30px;
+	text-decoration: underline;
+	text-decoration-thickness: 1.5px;
+	text-underline-offset: 6px;
+}
+
+.cabins__videos {
+	width: 100%;
+	padding: 0 35px;
+	display: flex;
+	justify-content: center;
+	gap: 24px;
+}
+
+.cabins__video {
+	flex: 0 1 33.333%;
+}
+
+.cabins__video img {
+	width: 100%;
+	height: auto;
+}
+
+/* --Facilities-- */
+.facilities {
+	background-color: #5B6460;
+	padding: 150px 0 126px 0;
+}
+
+.facilities__title {
+	font-weight: 300;
+	font-size: 40px;
+	line-height: 40px;
+	text-align: center;
+	margin-bottom: 100px;
+}
+
+.facilities__row {
+	display: flex;
+	justify-content: center;
+	gap: 133px;
+}
+
+.facilities__column {
+	display: flex;
+	flex-direction: column;
+	gap: 80px;
+}
+
+.item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 20px;
+}
+
+.item__title {
+	font-size: 18px;
+	line-height: 28px;
+}
+
+.about-us {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+.about-us__images {
+	display: flex;
+	position: relative;
+}
+
+.about-us__images img:last-child {
+	position: absolute;
+	z-index: 2;
+	top: 0;
+}
+
+.about-us__images img:last-child {
+	right: 0;
+}
+
+.about-us__link {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 3;
+	transform: translate(-50%, -50%);
+	width: 157px;
+	height: 157px;
+	border-radius: 50%;
+	background-color: #E9ECE0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.about-us__link a {
+	font-family: Montserrat;
+	color: #333;
+	font-weight: 300;
+	font-size: 16px;
+	line-height: 22px;
+}
+
+/* ---Footer--- */
+
+.footer {
+	width: 100%;
+	height: 477px;
+	background-color: #5B6460;
 }
