--- a/css/style.css
+++ b/css/style.css
@@ -423,4 +423,89 @@ body {
 	width: 100%;
 	height: 477px;
 	background-color: #5B6460;
+	padding: 100px 0;
+}
+
+.footer__row {
+	width: 100%;
+	height: 100%;
+	display: flex;
+}
+
+.footer__column {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.footer__column:first-child {
+	padding-right: 206px;
+}
+
+.footer__title {
+	font-weight: 600;
+	line-height: 30px;
+	margin-bottom: 40px;
+}
+
+.footer__form {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 70px;
+}
+
+.footer__copyright {
+	font-weight: 300;
+	font-size: 14px;
+	line-height: 30px;
+	opacity: 0.7;
+}
+
+.footer__contacts {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 50px;
+}
+
+.form__field {
+	font-family: inherit;
+	width: 100%;
+	border: 0;
+	border-bottom: 1px solid #EFEFEF;
+	outline: 0;
+	font-size: 1.3rem;
+	color: #fff;
+	padding: 7px 0;
+	background: transparent;
+	margin-bottom: 10px;
+}
+
+.form__field::placeholder {
+	font-style: italic;
+	font-weight: 300;
+	font-size: 16px;
+	line-height: 30px;
+	color: inherit;
+}
+
+.footer__label {
+	font-weight: 300;
+	line-height: 30px;
+	opacity: 0.7;
+}
+
+.footer__policy {
+	font-family: Montserrat;
+	font-weight: 300;
+	font-size: 14px;
+	line-height: 24px;
+	text-transform: uppercase;
+	color: inherit;
+}
+
+.footer__pay {
+	display: flex;
+	justify-content: end;
+	gap: 40px;
 }
